--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
+
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Dortmund Quiz",
+  "name": "Dortmund quiz",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "football.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "svg"
     },
     {
       "src": "logo192.png",
