--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "create-react-app": "^3.4.0",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.12.0",
